@@ -6,11 +6,8 @@ import Gestion_planing.service.CoursService;
 import Gestion_planing.service.PlanningService;
 import gestion_user.entities.User;
 import gestion_user.service.UserService;
-import javafx.collections.FXCollections;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
-import javafx.fxml.FXMLLoader;
-import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.control.Alert;
 import javafx.scene.control.Button;
@@ -19,10 +16,9 @@ import javafx.scene.control.DatePicker;
 import javafx.scene.control.TextField;
 import javafx.stage.Stage;
 
-import java.io.IOException;
 import java.sql.Date;
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class PlanifierUnCourController {
 
@@ -52,29 +48,17 @@ public class PlanifierUnCourController {
     private final CoursService coursService = new CoursService();
     private Scene currentScene;
 
-    public void setCurrentScene(Scene scene) {
-        this.currentScene = scene;
-    }
-
     @FXML
     void initialize() {
-        try {
-            // Retrieve the list of users and extract their IDs
-            List<User> users = userService.readAll();
-            List<Integer> coachIds = users.stream()
-                    .map(User::getId)
-                    .collect(Collectors.toList());
-            coachId.setItems(FXCollections.observableArrayList(coachIds));
+        List<User> users = userService.readAll();
+        List<Integer> coachIds = users.stream().map(User::getId).toList();
+        coachId.getItems().addAll(coachIds);
 
-            // Retrieve the list of courses and extract their IDs
-            List<cours> coursList = coursService.readAll();
-            List<Integer> courIds = coursList.stream()
-                    .map(cours::getId)
-                    .collect(Collectors.toList());
-            courId.setItems(FXCollections.observableArrayList(courIds));
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
+        List<cours> coursList = coursService.readAll();
+        List<Integer> courIds = coursList.stream().map(cours::getId).toList();
+        courId.getItems().addAll(courIds);
+
+        dateId.setValue(LocalDate.now());
     }
 
     @FXML
@@ -82,9 +66,10 @@ public class PlanifierUnCourController {
         String salle = salleId.getText();
         int nbplace;
         Date date;
-        String heur = tempId.getText();
+        String heure = tempId.getText();
         int coachIdSelected;
         int courIdSelected;
+
         try {
             nbplace = Integer.parseInt(nbplaceId.getText());
             date = Date.valueOf(dateId.getValue());
@@ -95,53 +80,41 @@ public class PlanifierUnCourController {
             return;
         }
 
+        // Retrieve the user associated with the coach ID
         User user = userService.readById(coachIdSelected);
-        cours cour = coursService.readById(courIdSelected);
-        if (user == null || cour == null) {
-            showAlert("Error", "User or course not found.");
-            return;
-        }
 
-        // Validate input
-        if (salle.isEmpty() || nbplace <= 0 || date == null || heur.isEmpty() || coachIdSelected <= 0 || courIdSelected <= 0) {
+        // Retrieve the course based on the selected course ID
+        cours cour = coursService.readById(courIdSelected);
+
+        if (salle.isEmpty() || nbplace <= 0 || heure.isEmpty() || coachIdSelected <= 0 || courIdSelected <= 0) {
             showAlert("Error", "All fields are required.");
             return;
         }
 
-        // Create the new planning entry
-        planning p = new planning(salle, nbplace, date, heur, cour, user);
+        // Ensure that the user retrieved is not null
+        if (user == null) {
+            showAlert("Error", "Selected coach does not exist.");
+            return;
+        }
 
-        // Add the planning entry to the database
+        // Create the planning instance with the retrieved user and course
+        planning p = new planning(salle, nbplace, date, heure, cour, user);
         planningService.add(p);
 
-        // Clear fields after adding
         clearFields();
 
-        // Redirect to the interface to display the schedule
-        redirectToAfficherPlaningAdmin();
+        Stage stage = (Stage) ajouterId.getScene().getWindow();
+        stage.close(); // Close the planning window after adding
     }
+
 
     private void clearFields() {
         salleId.clear();
         nbplaceId.clear();
-        dateId.setValue(null);
         tempId.clear();
         coachId.getSelectionModel().clearSelection();
         courId.getSelectionModel().clearSelection();
-    }
-
-    private void redirectToAfficherPlaningAdmin() {
-        Stage stage = (Stage) currentScene.getWindow();
-        try {
-            FXMLLoader loader = new FXMLLoader(getClass().getResource("/AfficherPlaningAdmine.fxml"));
-            Parent root = loader.load();
-            Scene scene = new Scene(root);
-            stage.setScene(scene);
-            AfficherCourController controller = loader.getController();
-            controller.refreshTable();
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+        dateId.setValue(LocalDate.now());
     }
 
     private void showAlert(String error, String s) {
@@ -150,5 +123,9 @@ public class PlanifierUnCourController {
         alert.setHeaderText(null);
         alert.setContentText(s);
         alert.showAndWait();
+    }
+
+    public void setCurrentScene(Scene scene) {
+        this.currentScene = scene;
     }
 }
